--- a/src/server/Pg.LetsExercise/Pg.LetsExercise.Plugins.Tests/Pg.LetsExercise.Plugins.Tests.csproj
+++ b/src/server/Pg.LetsExercise/Pg.LetsExercise.Plugins.Tests/Pg.LetsExercise.Plugins.Tests.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="FakeXrmEasy.9" Version="1.58.1" />
+    <PackageReference Include="Moq" Version="4.20.70" />
     <PackageReference Include="xunit" Version="2.6.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.5">
       <PrivateAssets>all</PrivateAssets>
