--- a/solutions/LetsExercise_managed/CanvasApps/pg_exercisetabdashboard_c4be7_DocumentUri/CanvasManifest.json
+++ b/solutions/LetsExercise_managed/CanvasApps/pg_exercisetabdashboard_c4be7_DocumentUri/CanvasManifest.json
@@ -87,6 +87,7 @@
       "rtlsupport": true,
       "showclassicthemes": false,
       "smartemaildatacard": false,
+      "sqlstoredprocedureenabled": false,
       "supportcolumnnamesasidentifiers": false,
       "tabledoesntwraprecords": true,
       "usedisplaynamemetadata": true,
@@ -115,7 +116,6 @@
     "FileID": "fb24b625-031a-4b80-a80a-d01fc9a7862a",
     "Id": "fb24b625-031a-4b80-a80a-d01fc9a7862a",
     "InstrumentationKey": "",
-    "LocalDatabaseReferences": "",
     "ManualOfflineProfileId": "",
     "Name": "exercise_tab_dashboard",
     "OriginatingVersion": "1.337",
