--- a/solutions/LetsExercise/CanvasApps/pg_exercisetabdashboard_c4be7_DocumentUri/Src/Screen1.fx.yaml
+++ b/solutions/LetsExercise/CanvasApps/pg_exercisetabdashboard_c4be7_DocumentUri/Src/Screen1.fx.yaml
@@ -209,11 +209,9 @@
             ZIndex: =3
 
             dailyContainer As groupContainer.manualLayoutContainer:
-                AlignInContainer: =AlignInContainer.Center
+                AlignInContainer: =AlignInContainer.Start
                 DropShadow: =DropShadow.Light
                 Fill: =RGBA(255, 255, 255, 1)
-                LayoutMinHeight: =100
-                LayoutMinWidth: =250
                 RadiusBottomLeft: =4
                 RadiusBottomRight: =4
                 RadiusTopLeft: =4
@@ -280,154 +278,6 @@
                     X: =131
                     Y: =463
                     ZIndex: =3
-
-                Gallery2 As gallery.BrowseLayout_Vertical_TwoTextOneImageVariant_pcfCore:
-                    BorderColor: =RGBA(166, 166, 166, 1)
-                    DelayItemLoading: =true
-                    FocusedBorderColor: =RGBA(0, 120, 212, 1)
-                    FocusedBorderThickness: =2
-                    Height: =204
-                    Items: =TempCollection
-                    Layout: =Layout.Vertical
-                    LoadingSpinner: =LoadingSpinner.Data
-                    TemplatePadding: =0
-                    TemplateSize: =48
-                    Width: =149
-                    X: =6
-                    Y: =49
-                    ZIndex: =8
-
-                    Title4 As Label:
-                        DisplayMode: =DisplayMode.Edit
-                        FontSize: =10.5
-                        FontWeight: =FontWeight.Semibold
-                        Height: =24
-                        OnChange: =false
-                        OnSelect: =Select(Parent)
-                        TabIndex: =-1
-                        Text: =ThisItem.Month
-                        VerticalAlignment: =VerticalAlign.Top
-                        Width: =Parent.TemplateWidth - Self.X - 8
-                        X: =
-                        Y: =((Parent.TemplateHeight - 36) / 2) - 4
-                        ZIndex: =3
-
-                    Subtitle2 As Label:
-                        DisplayMode: =DisplayMode.Edit
-                        FontSize: =9
-                        FontWeight: =FontWeight.Normal
-                        Height: =24
-                        OnChange: =false
-                        OnSelect: =Select(Parent)
-                        TabIndex: =-1
-                        Text: =ThisItem.Score
-                        VerticalAlignment: =VerticalAlign.Top
-                        Width: =Title4.Width
-                        X: =Title4.X
-                        Y: =Title4.Y + Title4.Height - 6
-                        ZIndex: =4
-
-                Gallery3 As gallery.BrowseLayout_Vertical_TwoTextOneImageVariant_pcfCore:
-                    BorderColor: =RGBA(166, 166, 166, 1)
-                    DelayItemLoading: =true
-                    FocusedBorderColor: =RGBA(0, 120, 212, 1)
-                    FocusedBorderThickness: =2
-                    Height: =186
-                    Items: =GroupedCollection
-                    Layout: =Layout.Vertical
-                    LoadingSpinner: =LoadingSpinner.Data
-                    TemplatePadding: =0
-                    TemplateSize: =48
-                    Width: =266
-                    X: =234
-                    Y: =67
-                    ZIndex: =9
-
-                    Title5 As Label:
-                        DisplayMode: =DisplayMode.Edit
-                        FontSize: =10.5
-                        FontWeight: =FontWeight.Semibold
-                        Height: =24
-                        OnChange: =false
-                        OnSelect: =Select(Parent)
-                        TabIndex: =-1
-                        Text: =ThisItem.Month
-                        VerticalAlignment: =VerticalAlign.Top
-                        Width: =Parent.TemplateWidth - Self.X - 8
-                        X: =
-                        Y: =((Parent.TemplateHeight - 36) / 2) - 4
-                        ZIndex: =3
-
-                    Subtitle3 As Label:
-                        DisplayMode: =DisplayMode.Edit
-                        FontSize: =9
-                        FontWeight: =FontWeight.Normal
-                        Height: =24
-                        OnChange: =false
-                        OnSelect: =Select(Parent)
-                        TabIndex: =-1
-                        Text: =ThisItem.'Sum of Value'
-                        VerticalAlignment: =VerticalAlign.Top
-                        Width: =Title5.Width
-                        X: =Title5.X
-                        Y: =Title5.Y + Title5.Height - 6
-                        ZIndex: =4
-
-                CompositeColumnChart3 As group:
-                    Height: =5
-                    Width: =5
-                    X: =40
-                    Y: =40
-                    ZIndex: =10
-
-                    Title6 As label:
-                        Align: =Align.Center
-                        Color: =RGBA(51, 51, 51, 1)
-                        DisabledColor: =RGBA(166, 166, 166, 1)
-                        Font: =Font.'Segoe UI'
-                        Height: =10
-                        Text: ="Chart Title"
-                        Width: =445
-                        X: =40
-                        Y: =40
-                        ZIndex: =11
-
-                    ColumnChart3 As barChart:
-                        BorderColor: =RGBA(0, 0, 0, 0)
-                        BorderStyle: =BorderStyle.None
-                        BorderThickness: =2
-                        Color: =RGBA(51, 51, 51, 1)
-                        DisabledBorderColor: =RGBA(0, 0, 0, 0)
-                        Font: =Font.'Segoe UI'
-                        Height: =166
-                        HoverBorderColor: =RGBA(0, 0, 0, 0)
-                        ItemColorSet: =[RGBA(49, 130, 93, 1),RGBA(48,166,103, 1), RGBA(94,193,108,1), RGBA(246,199,144,1), RGBA(247,199,114,1), RGBA(247,180,91,1), RGBA(246,143,100,1), RGBA(212,96,104,1), RGBA(148, 110, 176, 1), RGBA(118, 154, 204, 1), RGBA(96, 197, 234, 1)]
-                        Items: =GroupedCollection
-                        PressedBorderColor: =RGBA(0, 0, 0, 0)
-                        Size: =15
-                        Width: =445
-                        X: =29
-                        Y: =275
-                        ZIndex: =12
-
-                    Legend3 As legend:
-                        BorderColor: =RGBA(0, 0, 0, 0)
-                        BorderStyle: =BorderStyle.None
-                        BorderThickness: =2
-                        Color: =RGBA(51, 51, 51, 1)
-                        DisabledBorderColor: =RGBA(0, 0, 0, 0)
-                        DisabledColor: =RGBA(166, 166, 166, 1)
-                        DisabledFill: =RGBA(220, 220, 220, 1)
-                        Font: =Font.'Segoe UI'
-                        Height: =33
-                        HoverBorderColor: =RGBA(0, 0, 0, 0)
-                        ItemColorSet: =ColumnChart3.ItemColorSet
-                        Items: =ColumnChart3.SeriesLabels
-                        PressedBorderColor: =RGBA(0, 0, 0, 0)
-                        Width: =356
-                        X: =86
-                        Y: =220
-                        ZIndex: =13
 
             weeklyContainer As groupContainer.manualLayoutContainer:
                 DropShadow: =DropShadow.Light
@@ -518,6 +368,7 @@
                     ZIndex: =4
 
             monthlyContainer As groupContainer.manualLayoutContainer:
+                AlignInContainer: =AlignInContainer.SetByContainer
                 DropShadow: =DropShadow.Light
                 Fill: =RGBA(255, 255, 255, 1)
                 LayoutMinHeight: =100
@@ -538,8 +389,8 @@
                     Text: |-
                         ="End of Month: "  & Text(selectedLastDayOfMonth)
                     Width: =320
-                    X: =40
-                    Y: =97
+                    X: =12
+                    Y: =40
                     ZIndex: =1
 
                 lblSelectedStartOMonth As Label:
@@ -551,8 +402,8 @@
                     Text: |-
                         ="Start of Month: "  & Text(selectedFirstDayOfMonth)
                     Width: =320
-                    X: =40
-                    Y: =40
+                    X: =12
+                    Y: =8
                     ZIndex: =2
 
                 btnMonthAfter As Button:
@@ -576,8 +427,8 @@
                     Text: =">>"
                     TextColor: =
                     Width: =96
-                    X: =191
-                    Y: =168
+                    X: =203
+                    Y: =470
                     ZIndex: =3
 
                 btnMonthBefore As Button:
@@ -603,8 +454,8 @@
                     Text: ="<<"
                     TextColor: =
                     Width: =96
-                    X: =56
-                    Y: =168
+                    X: =57
+                    Y: =470
                     ZIndex: =4
 
             annualContainer As groupContainer.manualLayoutContainer:
@@ -629,8 +480,8 @@
                     Text: |-
                         ="End of Year: "  & Text(selectedLastDayOfYear)
                     Width: =320
-                    X: =40
-                    Y: =97
+                    X: =4
+                    Y: =36
                     ZIndex: =1
 
                 lblSelectedStartOfYear As Label:
@@ -642,8 +493,8 @@
                     Text: |-
                         ="Start of Year: "  & Text(selectedFirstDayOfYear)
                     Width: =320
-                    X: =40
-                    Y: =40
+                    X: =4
+                    Y: =4
                     ZIndex: =2
 
                 btnYearAfter As Button:
@@ -658,17 +509,40 @@
                     HoverFillColor: =
                     HoverTextColor: =
                     OnChange: =false
-                    OnSelect: |-
+                    OnSelect: |+
                         =Set(selectedFirstDayOfYear, DateAdd(selectedFirstDayOfYear, 1, TimeUnit.Years)); 
                         Set(selectedLastDayOfYear, DateAdd(selectedLastDayOfYear, 1, TimeUnit.Years)); 
+                        
+                        ClearCollect(FilteredCollection, Filter('Exercise Records', 'Date' >= selectedFirstDayOfYear && 'Date'  <= selectedLastDayOfYear)); 
+                        
+                        ClearCollect(
+                            TempByMonthCollection,
+                            AddColumns(
+                                FilteredCollection,
+                                "Month", Text(Date, "mm/yyyy")
+                            )
+                        );
+                        
+                        ClearCollect(
+                            GroupedByMonthCollection,
+                            DropColumns(
+                                AddColumns(
+                                    GroupBy(TempByMonthCollection, "Month", "GroupedByMonthItems"),
+                                    "Sum of Value", Sum(GroupedByMonthItems, Score)
+                                ),
+                            "GroupedByMonthItems"
+                            )
+                        );
+                        
+                        
                     PressedBorderColor: =
                     PressedFillColor: =
                     PressedTextColor: =
                     Text: =">>"
                     TextColor: =
                     Width: =96
-                    X: =175
-                    Y: =153
+                    X: =228
+                    Y: =471
                     ZIndex: =3
 
                 btnYearBefore As Button:
@@ -683,18 +557,134 @@
                     HoverFillColor: =
                     HoverTextColor: =
                     OnChange: =false
-                    OnSelect: |-
+                    OnSelect: |+
                         =Set(selectedFirstDayOfYear, DateAdd(selectedFirstDayOfYear, -1, TimeUnit.Years)); 
                         Set(selectedLastDayOfYear, DateAdd(selectedLastDayOfYear, -1, TimeUnit.Years)); 
+                        
+                        ClearCollect(FilteredCollection, Filter('Exercise Records', 'Date' >= selectedFirstDayOfYear && 'Date'  <= selectedLastDayOfYear)); 
+                        
+                        ClearCollect(
+                            TempByMonthCollection,
+                            AddColumns(
+                                FilteredCollection,
+                                "Month", Text(Date, "mm/yyyy")
+                            )
+                        );
+                        
+                        ClearCollect(
+                            GroupedByMonthCollection,
+                            DropColumns(
+                                AddColumns(
+                                    GroupBy(TempByMonthCollection, "Month", "GroupedByMonthItems"),
+                                    "Sum of Value", Sum(GroupedByMonthItems, Score)
+                                ),
+                            "GroupedByMonthItems"
+                            )
+                        );
+                        
+                        
                     PressedBorderColor: =
                     PressedFillColor: =
                     PressedTextColor: =
                     Text: ="<<"
                     TextColor: =
                     Width: =96
-                    X: =40
-                    Y: =153
+                    X: =101
+                    Y: =471
                     ZIndex: =4
+
+                AnnualColumnChart As barChart:
+                    BorderColor: =RGBA(0, 0, 0, 0)
+                    BorderStyle: =BorderStyle.None
+                    BorderThickness: =2
+                    Color: =RGBA(51, 51, 51, 1)
+                    DisabledBorderColor: =RGBA(0, 0, 0, 0)
+                    Font: =Font.'Segoe UI'
+                    Height: =398
+                    HoverBorderColor: =RGBA(0, 0, 0, 0)
+                    ItemColorSet: =[RGBA(49, 130, 93, 1),RGBA(48,166,103, 1), RGBA(94,193,108,1), RGBA(246,199,144,1), RGBA(247,199,114,1), RGBA(247,180,91,1), RGBA(246,143,100,1), RGBA(212,96,104,1), RGBA(148, 110, 176, 1), RGBA(118, 154, 204, 1), RGBA(96, 197, 234, 1)]
+                    Items: =GroupedByMonthCollection
+                    PressedBorderColor: =RGBA(0, 0, 0, 0)
+                    Size: =15
+                    Width: =425
+                    X: =29
+                    Y: =55
+                    ZIndex: =5
+
+                Gallery1 As gallery.BrowseLayout_Vertical_TwoTextOneImageVariant_pcfCore:
+                    BorderColor: =RGBA(166, 166, 166, 1)
+                    DelayItemLoading: =true
+                    FocusedBorderColor: =RGBA(0, 120, 212, 1)
+                    FocusedBorderThickness: =2
+                    Height: =554
+                    Items: =TempByMonthCollection
+                    Layout: =Layout.Vertical
+                    LoadingSpinner: =LoadingSpinner.Data
+                    TemplatePadding: =0
+                    TemplateSize: =48
+                    Visible: =false
+                    X: =694
+                    ZIndex: =6
+
+                    Rectangle1 As rectangle:
+                        BorderColor: =RGBA(166, 166, 166, 1)
+                        DisabledFill: =RGBA(0,0,0,0)
+                        Fill: =RGBA(0,0,0,0)
+                        FocusedBorderColor: =RGBA(0, 120, 212, 1)
+                        Height: =Parent.TemplateHeight
+                        HoverFill: =RGBA(0,0,0,0)
+                        OnSelect: =Select(Parent)
+                        PressedFill: =RGBA(0,0,0,0)
+                        TabIndex: =0
+                        Width: =Parent.TemplateWidth
+                        ZIndex: =1
+
+                    Image1 As image:
+                        BorderColor: =RGBA(0, 0, 0, 0)
+                        BorderStyle: =BorderStyle.None
+                        BorderThickness: =2
+                        DisabledBorderColor: =RGBA(0, 0, 0, 0)
+                        DisabledFill: =RGBA(0, 0, 0, 0)
+                        Height: =28
+                        HoverBorderColor: =RGBA(0, 0, 0, 0)
+                        HoverFill: =RGBA(0, 0, 0, 0)
+                        OnSelect: =Select(Parent)
+                        PressedBorderColor: =RGBA(0, 0, 0, 0)
+                        PressedFill: =RGBA(0, 0, 0, 0)
+                        Width: =28
+                        X: =12
+                        Y: =(Parent.TemplateHeight / 2) - (Self.Height / 2)
+                        ZIndex: =2
+
+                    Title1 As Label:
+                        DisplayMode: =DisplayMode.Edit
+                        FontSize: =10.5
+                        FontWeight: =FontWeight.Semibold
+                        Height: =24
+                        OnChange: =false
+                        OnSelect: =Select(Parent)
+                        TabIndex: =-1
+                        Text: =ThisItem.Month
+                        VerticalAlignment: =VerticalAlign.Top
+                        Width: =Parent.TemplateWidth - Self.X - 8
+                        X: =Image1.X + Image1.Width + 12
+                        Y: =((Parent.TemplateHeight - 36) / 2) - 4
+                        ZIndex: =3
+
+                    Subtitle1 As Label:
+                        DisplayMode: =DisplayMode.Edit
+                        FontSize: =9
+                        FontWeight: =FontWeight.Normal
+                        Height: =24
+                        OnChange: =false
+                        OnSelect: =Select(Parent)
+                        TabIndex: =-1
+                        Text: =ThisItem.Score
+                        VerticalAlignment: =VerticalAlign.Top
+                        Width: =Title1.Width
+                        X: =Title1.X
+                        Y: =Title1.Y + Title1.Height - 6
+                        ZIndex: =4
 
         FooterContainer1 As groupContainer.horizontalAutoLayoutContainer:
             BorderThickness: =1
