--- a/solutions/LetsExercise/CanvasApps/pg_exercisetabdashboard_c4be7_DocumentUri/Src/Screen1.fx.yaml
+++ b/solutions/LetsExercise/CanvasApps/pg_exercisetabdashboard_c4be7_DocumentUri/Src/Screen1.fx.yaml
@@ -535,7 +535,7 @@
                     Text: |-
                         ="End of Year: "  & Text(selectedLastDayOfYear)
                     Width: =320
-                    X: =228
+                    X: =324
                     Y: =4
                     ZIndex: =1
 
@@ -574,7 +574,7 @@
                             TempByMonthCollection,
                             AddColumns(
                                 FilteredCollection,
-                                "Month", Text(Date, "mm/yyyy")
+                                "Month", Value(Text(Date, "mm"))
                             )
                         );
                         
@@ -622,7 +622,7 @@
                             TempByMonthCollection,
                             AddColumns(
                                 FilteredCollection,
-                                "Month", Text(Date, "mm/yyyy")
+                                "Month", Value(Text(Date, "mm"))
                             )
                         );
                         
@@ -658,7 +658,8 @@
                     Height: =398
                     HoverBorderColor: =RGBA(0, 0, 0, 0)
                     ItemColorSet: =[RGBA(49, 130, 93, 1),RGBA(48,166,103, 1), RGBA(94,193,108,1), RGBA(246,199,144,1), RGBA(247,199,114,1), RGBA(247,180,91,1), RGBA(246,143,100,1), RGBA(212,96,104,1), RGBA(148, 110, 176, 1), RGBA(118, 154, 204, 1), RGBA(96, 197, 234, 1)]
-                    Items: =GroupedByMonthCollection
+                    Items: |
+                        =SortByColumns( GroupedByMonthCollection,"Month")
                     PressedBorderColor: =RGBA(0, 0, 0, 0)
                     Size: =15
                     Width: =425
