--- a/solutions/LetsExercise_managed/CanvasApps/pg_exercisetabdashboard_c4be7_DocumentUri/Src/App.fx.yaml
+++ b/solutions/LetsExercise_managed/CanvasApps/pg_exercisetabdashboard_c4be7_DocumentUri/Src/App.fx.yaml
@@ -20,7 +20,7 @@ App As appinfo:
             TempByMonthCollection,
             AddColumns(
                 FilteredByYearCollection,
-                "Month", Text(Date, "mm/yyyy")
+                "Month", Value(Text(Date, "mm"))
             )
         );
         
